@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE beans PUBLIC  "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
+
+<beans>
+
+	<bean id="a" class="org.springframework.beans.factory.xml.DependenciesBean"
+		dependencyCheck="objects">
+		<property name="spouse"><ref bean="kerry"/></property>
+		<property name="age"><value>33</value></property>
+		<property name="name"><value>Rod</value></property>
+	</bean>
+	
+	<bean id="kerry" class="org.springframework.beans.TestBean"
+		dependencyCheck="none">
+	</bean>
+
+</beans>
